Revision history for Perl extension {{$dist->name}}

{{$NEXT}}

1.14      2016-10-13 11:04:48 -0400
  - Fix a regex in a test that fails on recent versions of
    Test2 on Windows (possibly others) (gh#8)
  - One of the tests was unreasonably slow, so it does
    not get run for users, but will be used for development
    only
  - Remove warning condition that happens with at least some
    older versions of Perl when using quotemeta without
    parentheses (gh#7 Thanks Brendan Byrd)

1.12      2016-05-02 11:18:01 -0400
  - Production release identical to 1.11_03 release.

1.11_03   2016-04-28 06:45:52 -0400
  - Check for IO errors on temporary .pm file

1.11_02   2016-04-27 13:15:35 -0400
  - One possible fix for gh#5 
    (see https://github.com/plicease/Test-Script/issues/5)

1.11_01   2016-04-27 12:28:33 -0400
  - Including some optional Test2 based tests that should 
    only be run with a merged Test2 / Test::Builder
    (currently a dev release as Test::Simple on CPAN)

1.10      2015-05-12 05:15:41 -0400
  - Work around for buggy IPC::Run3 0.048 on MSWin32
    On Windows we probe for and mitigate a bug in IPC::Run3
    (see https://github.com/plicease/Test-Script/issues/1 for details)
    with the intention of removing the workaround if/when IPC::Run3
    is fixed.

1.09      2015-05-07 16:44:26 -0400
  - If IPC::Run3::run3 throws an exception it will now fail the test
    (with a helpful diagnostic) rather than crashing the test script.
  - A script that is killed with a singnal is now considered a failure
    as well.
  - Use alternate expected exit and signal values with options as the
    second argument to script_runs.
  - Ability to pass input via stdin to the script with script_runs.
  - Ability to capture stdout and stderr from script with script_runs.
  - Functions to test stdout and stderr:
      script_stdout_is
      script_stdout_isnt
      script_stdout_like
      script_stdout_unlike
      script_stderr_is
      script_stderr_isnt